[tool.poetry]
name = "codeforher-backend"
version = "0.1.0"
description = ""
authors = ["Ashish K <64360092+Ashishkumaraswamy@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.11"
pymongo = "^4.11.3"
bcrypt = "^4.3.0"
python-dotenv = "^1.0.1"
jwt = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
